<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.example.fran.appiumtechtalk.fragments.FormFragment">

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/error"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:hint="@string/name_hint" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:hint="@string/last_name_hint" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_label"
        android:layout_marginTop="15dp">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/eye_color_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_group"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eye_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eye_color"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/eye_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>

    <NumberPicker
        android:id="@+id/eye_color_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eye_color_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:theme="@style/AppTheme.Picker" />

    <TextView
        android:id="@+id/success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eye_color_picker"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/success"
        android:visibility="gone"
        android:textColor="@android:color/holo_green_dark"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/success"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/darker_gray"
        android:text="@string/submit"/>
</RelativeLayout>
